Updated README to include details about running the code using newer java versions